@@ -2130,6 +2130,29 @@ Since: 2.4
 </return>
 </function>
 
+<function name="gtk_file_chooser_get_current_folder">
+<description>
+Gets the current folder of @chooser as a local filename.
+See gtk_file_chooser_set_current_folder().
+
+
+</description>
+<parameters>
+<parameter name="chooser">
+<parameter_description> a #GtkFileChooser
+</parameter_description>
+</parameter>
+</parameters>
+<return> the full path of the current folder, possibly empty if the current
+path cannot be represented as a local filename.  This function may also return
+and empty string if the file chooser was unable to load the last folder that was
+requested from it; for example, as would be for calling
+gtk_file_chooser_set_current_folder() on a nonexistent folder.
+
+Since: 2.4
+</return>
+</function>
+
 <function name="gtk_file_chooser_list_shortcut_folders">
 <description>
 Queries the list of shortcut folders in the file chooser, as set by
@@ -2147,6 +2170,89 @@ Since: 2.4
 folders..
 
 
+</return>
+</function>
+
+<function name="gtk_file_chooser_list_shortcut_folder_uris">
+<description>
+Queries the list of shortcut folders in the file chooser, as set by
+gtk_file_chooser_add_shortcut_folder_uri().
+
+
+</description>
+<parameters>
+<parameter name="chooser">
+<parameter_description> a #GtkFileChooser
+</parameter_description>
+</parameter>
+</parameters>
+<return> A list of folder URIs
+
+Since: 2.4
+</return>
+</function>
+
+<function name="gtk_file_chooser_list_filters">
+<description>
+Lists the current set of user-selectable filters; see
+gtk_file_chooser_add_filter(), gtk_file_chooser_remove_filter().
+
+
+</description>
+<parameters>
+<parameter name="chooser">
+<parameter_description> a #GtkFileChooser
+</parameter_description>
+</parameter>
+</parameters>
+<return> a list containing the current set of
+user selectable filters.
+
+Since: 2.4
+</return>
+</function>
+
+
+<function name="gtk_file_chooser_get_uris">
+<description>
+Lists all the selected files and subfolders in the current folder of
+@chooser. The returned names are full absolute URIs.
+
+
+</description>
+<parameters>
+<parameter name="chooser">
+<parameter_description> a #GtkFileChooser
+</parameter_description>
+</parameter>
+</parameters>
+<return> a list containing the URIs of all selected
+files and subfolders in the current folder.
+
+Since: 2.4
+</return>
+</function>
+
+
+<function name="gtk_file_chooser_get_filenames">
+<description>
+Lists all the selected files and subfolders in the current folder of
+@chooser. The returned names are full absolute paths. If files in the current
+folder cannot be represented as local filenames they will be ignored. (See
+gtk_file_chooser_get_uris())
+
+
+</description>
+<parameters>
+<parameter name="chooser">
+<parameter_description> a #GtkFileChooser
+</parameter_description>
+</parameter>
+</parameters>
+<return> a list containing the filenames of all selected
+files and subfolders in the current folder.
+
+Since: 2.4
 </return>
 </function>
 
